--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ecoaware
 NODE_ENV=development
+CLIENT_URL=http://localhost:3000
+MONGODB_URI=mongodb://localhost:27017/ecoaware
+JWT_SECRET=ecoaware_secure_jwt_token
